sap-successfactors/5.0/modules/ROOT/pages/sap-successfactors-connector-reference.adoc
= SAP SuccessFactors Connector 5.0 Reference 
:page-aliases: connectors::sap/sap-successfactors-connector-reference.adoc

Anypoint Connector for SAP SuccessFactors (SuccessFactors Connector) provides full support to query, create, update, and delete entities using the OData API exposed by SuccessFactors.


[[Config]]
== Default Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_Basic, Basic Authentication - Deprecated>>
* <<Config_Oauth, OAuth SAML Bearer Assertion Authentication>>
 | The connection types to provide to this configuration. | | x
| Time Zone a| String |  The timezone with which the Date objects returned from SuccessFactors are converted. |  UTC |
| Name a| String |  The identifier of this element used to reference it in other components |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

[[Config_Basic]]
== Basic Authentication - Deprecated

This connection type is deprecated. Use <<Config_Oauth, OAuth SAML Bearer Assertion Authentication>> instead.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy Configuration a| One of:

* <<Default>>
* <<NTLM>> | Proxy configuration. |  |
| Data Center's EndPoint URL a| String |  Data center's endpoint URL. If the new data centers don't appear in the dropdown list, you can manually enter the value of the new data center. |  |x
| Use Persistent Connections a| Boolean |  If `false`, each connection is closed after the first request completes. |  `true` |
| Max Connections a| Number |  The maximum number of outbound connections to keep open concurrently. By default, the number of connections is unlimited. |  `-1` |
| Connection Idle Timeout a| Number |  The number of milliseconds that a connection can remain idle before it is closed. The value of this attribute is used only when persistent connections are enabled. |  `30000` |
| Connection Idle Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Connection idle timeout unit for the request | `SECONDS` |
| Stream Response a| Boolean |  Whether or not to stream received responses, which means that processing continues as soon as all headers are parsed and the body is streamed as it is received. When enabled, the response must eventually be read since, depending on the configured buffer size, the response might not fit into memory and processing stops until space is available. |  `false` |
| Response Buffer Size a| Number | The space in bytes for the buffer where the HTTP response is stored. |  `-1` |
| Connection timeout a| Number |  Connection timeout for the request |  `30` |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Connection timeout unit for the request |  `SECONDS` |
| Default headers a| Array of <<DefaultHeader>> |  Default HTTP headers to include in the message. |  |
| Default query parameters a| Array of <<DefaultQueryParam>> a|  Default Query parameters to include in the request. Here is how the expression should be defined:

----
"defaultQueryParams": [
  { "key": "fromDate", "value": "2025-01-01" },
  { 'key': 'asOfDate', 'value': vars.currDate as String },
  { 'key': 'balanceAsOfDate', 'value': attributes.queryParams.effective_date as String },
  { "key": "toDate", "value": payload.toDate as String }
]
----
 |  |
| Company ID a| String |  The Company ID |  |x
| User Name a| String |  The user name |  |x
| Password a| String |  The password |  |x
| Enable Session Reuse a| Boolean |  Boolean to enable the *Session Reuse* feature. By default, it is false. |  `false` |
| TLS Configuration a| <<TLS>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[Config_Oauth]]
== OAuth SAML Bearer Assertion Authentication

include::connectors::partial$oauth2-description.adoc[]


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy Configuration a| One of:

* <<Default>>
* <<NTLM>> | Proxy configuration. |  |
| Object Store a| ObjectStore | Configures the object store that stores data for each resource owner. If not configured, Mule uses the default object store. |  |
| Data Center's EndPoint URL a| String |  Data center's endpoint URL. If the new data centers don't appear in the dropdown list, you can manually enter the value of the new data center. |  | x
| Use Persistent Connections a| Boolean |  If false, each connection is closed after the first request is completed. |  `true` |
| Max Connections a| Number |  The maximum number of outbound connections to keep open concurrently. By default, the number of connections is unlimited. |  `-1` |
| Connection Idle Timeout a| Number |  The number of milliseconds that a connection can remain idle before it is closed. The value of this attribute is used only when persistent connections are enabled. |  `30000` |
| Connection Idle Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Connection idle timeout unit for the request. | `SECONDS` |
| Stream Response a| Boolean |  Whether or not to stream received responses, which means that processing continues as soon as all headers are parsed and the body is streamed as it is received. When enabled, the response must eventually be read since, depending on the configured buffer size, the response might not fit into memory and processing stops until space is available. | `false` |
| Response Buffer Size a| Number |  The space in bytes for the buffer where the HTTP response will be stored. |  `-1` |
| Connection timeout a| Number |  Connection timeout for the request. |  `30` |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Connection timeout unit for the request. |  `SECONDS` |
| Default headers a| Array of <<DefaultHeader>> |  Default HTTP headers to include in the message. |  |
| Default query parameters a| Array of <<DefaultQueryParam>> a|  Default Query parameters to include in the request. Here is how the expression should be defined:

----
"defaultQueryParams": [
  { "key": "fromDate", "value": "2025-01-01" },
  { 'key': 'asOfDate', 'value': vars.currDate as String },
  { 'key': 'balanceAsOfDate', 'value': attributes.queryParams.effective_date as String },
  { "key": "toDate", "value": payload.toDate as String }
]
----
 |  |
| Client Id a| String |  The client ID to use for OAuth. |  | x
| User Id a| String |  The user ID used for OAuth. |  | x
| The company id. a| String |  The company ID used in SuccessFactors. |  | x
| The token url a| String |  The token URL that is passed to the identity provider to generate the OAuth Bearer token. | `\https://api4.successfactors.com/oauth/token`  |
| Key Store a| String | Allows to select the keystore file. |  | x
| Store Password a| String | Corresponding keystore password. |  | x
| Type a| String |  Type of the keystore. |  `jks` | 
| Certificate Alias a| String | Alias name for the certificate stored in the keystore. |  | 
| Scopes a| String |  The scopes. |  |
| TLS Configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the keystore in the `tls:context` child element of the `listener-config`.  | `HTTP`  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===


== List of Operations

* <<CreateEntity>>
* <<DeleteEntity>>
* <<GetEntityById>>
* <<Query>>
* <<Update>>
* <<UpsertEntity>>

[[CreateEntity]]
== Create Entity
`<successfactors:create-entity>`

Creates a new entity, the type of which is defined by the *Entity Set Name*.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | x
| Entity Set Name a| String | Entity set name to which the created entity belongs. |  |x
| Properties a| Object | Properties of the entity. |  #[payload] |
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the *Target variable*. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Object
| *Attributes Type* a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SUCCESSFACTORS:BAD_REQUEST
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_INPUT
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:METADATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:SERVER_ERROR
* SUCCESSFACTORS:TIMEOUT
* SUCCESSFACTORS:UNAUTHORIZED



[[DeleteEntity]]
== Delete Entity

`<successfactors:delete-entity>`


This operation deletes the entry for a specified entity.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | |x
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | x
| Entity Set Name a| String |  Name of the entity set from which to delete the entity |  |x
| Key Properties a| Object |  #[payload] |  |x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations

* <<Config>>

=== Throws

* SUCCESSFACTORS:BAD_REQUEST
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_INPUT
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:METADATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:SERVER_ERROR
* SUCCESSFACTORS:TIMEOUT
* SUCCESSFACTORS:UNAUTHORIZED


[[GetEntityById]]
== Get Entity By ID
`<successfactors:get-entity-by-id>`

Retrieves an entity by its specified key from the resource path of the URI.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Select a| String |  Value of a `$select` System Query Option is a comma-separated list of selection clauses, each of which can be a Property name, Navigation Property name, or asterisk (&#42;) character. |  |
| Expand a| String |  The syntax of an `$expand` query option is a comma-separated list of Navigation Properties. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | x
| Entity Set Name a| String | Entity set name to search using the entity with the given key. |  |x
| Key Properties a| Object  |  #[payload] |  |x
| Target Variable a| String |  Name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the *Target variable*. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Object
| *Attributes Type* a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SUCCESSFACTORS:BAD_REQUEST
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_INPUT
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:METADATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:SERVER_ERROR
* SUCCESSFACTORS:TIMEOUT
* SUCCESSFACTORS:UNAUTHORIZED


[[Query]]
== Query

`<successfactors:query>`

This operation queries entities of a specified type.

[NOTE]
You might receive duplicate records when using the *Query* operation with pagination. Use the *Idempotent* filter to remove any duplicates received.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity Set Name a| String |  Name of the entity set in which to query. |  |x
| Pagination Type a| Enumeration, one of:

** CLIENT
** CURSOR
** SNAPSHOT a|  Pagination type used by the *Query* operation:

* `CLIENT`
+
Uses query options on the client side to create an offset that restricts the amount of data returned from the server.

* `CURSOR`
+
Maintains a database cursor on the server throughout pagination HTTP requests. The `CURSOR` pagination type does not support `$orderby`.

* `SNAPSHOT`
+
Is a server-side pagination that works by keeping a list of all business keys of the dataset on the server. The `SNAPSHOT` pagination type does not support `$top` or `$skip`.
 | `CLIENT` |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | x
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* <<non-repeatable-iterable>> |  Configure the streaming strategy for the connector. |  |
| Filter a| One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>> | Filters to apply to the query. |  |
| Order By Values a| Array of <<OrderByValue>> | Which fields the query is ordered by and their direction.  |  |
| Select a| String |  Specifies that a response from an OData service should return a subset of the properties. |  |
| Expand a| String | The `$expand` parameter indicates a comma-separated list of Navigation Properties. |  |
| Page Size a| Number | Chunk size of each query page. |  100 |
| Top a| Number | Maximum amount of records to retrieve. |  |
| Skip a| Number | Amount of records to skip before retrieving records. |  |
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the *Target variable*. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Array of Object
|===

=== For Configurations

* <<Config>>

=== Throws

* SUCCESSFACTORS:BAD_REQUEST
* SUCCESSFACTORS:CONNECTIVITY 
* SUCCESSFACTORS:INVALID_INPUT
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:METADATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:SERVER_ERROR
* SUCCESSFACTORS:TIMEOUT
* SUCCESSFACTORS:UNAUTHORIZED



[[Update]]
== Update
`<successfactors:update>`

Updates the existing data in an entity, so all property values in the entity either take the values provided in the request body or are reset to their default value if no data is provided in the request.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | x
| Entity Set Name a| String | Entity set name. This value is dynamically loaded from the SuccessFactors OData description file.|  |x
| Properties a| Object |  The properties that are present on the new entity. These properties should contain the key of the entity. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* <<Config>>

=== Throws

* SUCCESSFACTORS:BAD_REQUEST
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_INPUT
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:METADATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:SERVER_ERROR
* SUCCESSFACTORS:TIMEOUT
* SUCCESSFACTORS:UNAUTHORIZED

[[UpsertEntity]]
== Upsert Entity
`<successfactors:upsert-entity>`

Creates or updates an entity on SuccessFactors, the type of which is defined by the *Entity Set Name* property. This method returns the full SAP SuccessFactors upsert response after it finishes executing.

=== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | x
| Entity Set Name a| String |  Entity set name. This value is dynamically loaded from SuccessFactors OData description file. |  | x
| Properties a| Object |  Properties that are present on the entity. |  #[payload] |
| Target Variable a| String |  Name of a variable on which to place the operation's output |  |
| Target Value a| String | An expression that evaluates the operation's output. The expression outcome is stored in the *Target variable*. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  |
|======================

[%autowidth.spread]
|===
| *Type* a| Object
| *Attributes Type* a| <<ResponseAttributes>>
|===


==== For Configurations.
* <<Config>>

=== Throws

* SUCCESSFACTORS:BAD_REQUEST
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_INPUT
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:METADATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:SERVER_ERROR
* SUCCESSFACTORS:TIMEOUT
* SUCCESSFACTORS:UNAUTHORIZED


== Types

[[DefaultHeader]]
=== Default Header

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Key a| String | The key |  | x
| Value a| String | The value |  | x
|======================

[[DefaultQueryParam]]
=== Default Query Param

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Key a| String | The key. For example, `balanceAsOfDate`. |  | x
| Value a| String | The value. For example, `vars.effectiveDate` (as a String).|  | x
|======================

[[Tls]]
=== TLS

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location to resolve relative to the current classpath and file system (if possible) of the truststore. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the truststore. |  |
| Insecure a| Boolean | If true, no certificate validations are performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location to resolve relative to the current classpath and file system (if possible) of the keystore |  |
| Type a| String | Type of store used |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key to use. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | Password used to protect the private key |  |
| Password a| String | Password used to protect the keystore |  |
| Algorithm a| String | The algorithm used by the keystore |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Verify only the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected previously). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server cannot be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore), if present. |  |
|===

[[crl-file]]
=== CRL File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file |  |
|===

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds) | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If `false`, the reconnection strategy runs in a separate, non-blocking thread. | `true` |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds) | |
| Blocking |Boolean |If `false`, the reconnection strategy runs in a separate, non-blocking thread. | `true` |
|===


[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[ResponseAttributes]]
=== Response Attributes

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Headers a| Object |  |  |
| Status Code a| Number |  |  |
|======================


[[ErrorMapping]]
=== Error Mapping

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|======================

[[OrderByValue]]
=== Order By Value

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field a| String | The field by which to order. |  | x
| Direction a| Enumeration, one of:

** ASCENDING
** DESCENDING | The direction by which to order. Default is ASCENDING | ASCENDING |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In-Memory Iterable

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of instances to initially allow to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand and that to raise a STREAM_MAXIMUM_SIZE_EXCEEDED error when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory to use. If more than that is used then raise a STREAM_MAXIMUM_SIZE_EXCEEDED error. A value lower or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | This is the maximum number of instances to keep in memory. If more than that is required, then it starts to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[non-repeatable-iterable]]
=== Non-repeatable Stream

In some cases, you may want to disable the repeatable stream functionality and use non-repeatable streams, which can have less performance overhead, memory use, and cost.

[[Default]]
=== Default Proxy Configuration

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests are sent. |  | x
| Port a| Number | Port where the proxy requests are sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
| Non Proxy Hosts a| String | A list of comma separated hosts against which the proxy should not be used. |  |
|===

[[NTLM]]
=== NTLM

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Ntlm Domain a| String | The domain to authenticate against the proxy. |  | x
| Host a| String | Host where the proxy requests are sent. |  | x
| Port a| Number | Port where the proxy requests are sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
| Non Proxy Hosts a| String | A list of comma separated hosts against which the proxy should not be used. |  |
|===

[[Addition]]
=== Addition

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Value To Add a| Number | The value to add. Accepts a double. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[Division]]
=== Division

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Divider a| Number | The value by which the field value will be divided. This value should never be 0. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[Module]]
=== Module

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Divider a| Number | The value by which the field value will be divided. This value should never be 0. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[Multiplication]]
=== Multiplication

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Multiplier a| Number | The value by which to multiply the value of the field. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[Subtraction]]
=== Subtraction

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Value To Substract a| Number | The value to subtract. Accepts a double. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[In]]
=== In

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Values a| Array of String | The list of values against which the field value will be checked. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[Like]]
=== Like

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Value a| String | The expression to evaluate against the field value. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[QueryValue]]
=== Query Value

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Value a| String |  |  |
|===

[[And]]
=== And

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Operators a| Array of One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
|===

[[EqualTo]]
=== Equal To

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Compared Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[GreaterThan]]
=== Greater Than

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Compared Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[LesserThan]]
=== Lesser Than

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Compared Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[Not]]
=== Not

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Negative a| One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
|===

[[Or]]
=== Or

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Operators a| Array of One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
|===

[[Grouping]]
=== Grouping

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Operator a| One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
| Field Name a| String |  |  | x
|===

[[EndsWith]]
=== Ends With

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Ends With Value a| String | The string value with which the field value should end. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[StartsWith]]
=== Starts With

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Starts With Value a| String | The string value with which the field value should start. |  | x
| Field Name a| String | The name of the field on which to operate. |  | x
|======================

[[ToLowercase]]
=== To Lowercase

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[ToUppercase]]
=== To Uppercase

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[Trim]]
=== Trim

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
